Revert Java 17 preview (doesn't compile normally)